--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *" # setiap hari jam 00:00 UTC
   workflow_dispatch:
 
 jobs:
@@ -13,6 +13,7 @@ jobs:
         uses: Platane/snk@v3
         with:
           github_user_name: WildanDW
+          outputs: dist
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       - name: Push to output branch
