--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Generate GitHub snake animation
         uses: Platane/snk@v3
         with:
-          github_user_name: WildanDW
+          github_user_name: wildandw
           outputs: dist
           svg_out_path: dist/github-contribution-grid-snake.svg
 
