--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -9,6 +9,12 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Create output directory
+        run: mkdir -p dist
+
       - name: Generate GitHub snake animation
         uses: Platane/snk@v3
         with:
