--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # jalan setiap hari jam 00:00 UTC
+    - cron: "0 0 * * *"  # setiap hari jam 00:00 UTC
   workflow_dispatch:
 
 jobs:
@@ -11,6 +11,9 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+
+      - name: Create output directory
+        run: mkdir -p dist
 
       - name: Generate GitHub snake animation
         uses: Platane/snk@v3
