--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # setiap hari jam 00:00 UTC
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -12,20 +12,25 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Create output directory
-        run: mkdir -p dist
+      - name: Setup Git Identity
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
 
-      - name: Generate GitHub snake animation
+      - name: Generate Snake SVG
         uses: Platane/snk@v3
         with:
           github_user_name: wildandw
           outputs: |
             dist/github-contribution-grid-snake.svg
 
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Prepare output branch
+        run: |
+          git fetch origin output || echo "output branch does not exist yet"
+          git switch --orphan output
+          rm -rf .
+          mkdir -p dist
+          cp ../dist/github-contribution-grid-snake.svg dist/
+          touch .nojekyll
+          git add .
+          git commit -m "generate snake
