--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -23,14 +23,14 @@ jobs:
           github_user_name: wildandw
           outputs: |
             dist/github-contribution-grid-snake.svg
-
       - name: Prepare output branch
         run: |
           git fetch origin output || echo "output branch does not exist yet"
           git switch --orphan output
-          rm -rf .
+          find . -not -path "./.git*" -not -name "." -exec rm -rf {} +
           mkdir -p dist
           cp ../dist/github-contribution-grid-snake.svg dist/
           touch .nojekyll
           git add .
-          git commit -m "generate snake
+          git commit -m "generate snake animation"
+          git push -f origin output
