--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *" # setiap hari jam 00:00 UTC
   workflow_dispatch:
 
 jobs:
@@ -12,25 +12,17 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Setup Git Identity
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-
-      - name: Generate Snake SVG
+      - name: Generate GitHub snake animation
         uses: Platane/snk@v3
         with:
           github_user_name: wildandw
           outputs: |
             dist/github-contribution-grid-snake.svg
-      - name: Prepare output branch
-        run: |
-          git fetch origin output || echo "output branch does not exist yet"
-          git switch --orphan output
-          find . -not -path "./.git*" -not -name "." -exec rm -rf {} +
-          mkdir -p dist
-          cp ../dist/github-contribution-grid-snake.svg dist/
-          touch .nojekyll
-          git add .
-          git commit -m "generate snake animation"
-          git push -f origin output
+
+      - name: Deploy SVG to output branch
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
