--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *" # setiap hari jam 00:00 UTC
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -16,13 +16,12 @@ jobs:
         uses: Platane/snk@v3
         with:
           github_user_name: wildandw
-          outputs: |
-            dist/github-contribution-grid-snake.svg
+          outputs: github-contribution-grid-snake.svg
 
-      - name: Deploy SVG to output branch
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
-          build_dir: dist
+          build_dir: .
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
