--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,17 +12,14 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Generate Snake SVG
+      - name: Generate GitHub snake animation
         uses: Platane/snk@v3
         with:
           github_user_name: wildandw
           outputs: |
             dist/github-contribution-grid-snake.svg
 
-      - name: Add .nojekyll
-        run: touch dist/.nojekyll
-
-      - name: Push to output branch
+      - name: Deploy SVG to output branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
